--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 
 div#header_wrapper{
   width: 100%;
-  height: 400px;
+  height: 350px;
 }
 
 div#header{
@@ -27,18 +27,21 @@ div.banner_image{
 }
 
 div.menu_bar{
-  background-color: gray;
+  background-color: #33ba0b;
 }
 
 table.menu{
   border-spacing: 0px 0px;
+  width: 500px;
 }
 
 td.menu_element{
+  text-align: center;
   color: white;
   font-size: 20px;
-  background-color: DarkGreen;
-  width: 50px;
+  font-family: Courier;
+  background-color: #157203;
+  height: 50px;
 }
 
 div.my_picture{
@@ -47,4 +50,5 @@ div.my_picture{
 
 div.content{
   padding-left: 5px;
+  font-family: Courier;
 }
