--- a/index.css
+++ b/index.css
@@ -1,41 +1,44 @@
 body{
-  /*margin: 0px;*/
+  margin: 0px;
+  background-color: #d0cfcf;
 }
 
-div#header_wrapper{
-  width: 100%;
-  height: 350px;
-}
+/* HEADER */
 
 div#header{
-  /*position: absolute;*/
   width: 100%;
+  height: 350px;
   top: 0px;
   left: 0px;
 }
 
 div.banner_image{
   background-image: url("test.png");
-  min-height: 300px;
-  margin: 0px;
-  padding: 0px;
+  height: 300px;
 }
 
-.title{
-  /*position: absolute;*/
-  font-size: 32px;
-  font-family: Helvetica;
-  color: white;
-  left: 50px;
+div.name{
+  position: absolute;
+  padding: 0px 20px 0px 20px;
+  margin-top: 20px;
+  margin-left: 20px;
+  border-width: 5px;
+  border-style: solid;
+  border-radius: 20px;
+  text-align: center;
+  font-size: 40px;
+  color: black;
+  background-color: rgba(208, 207, 207, 0.7);
+  border-color: #3da35d;
 }
 
 div.menu_bar{
-  background-color: #33ba0b;
+  background-color: #211a1d;
+  margin: 0px;
 }
 
 table.menu{
-  border-spacing: 0px 0px;
-  width: 500px;
+  width: 75%;
 }
 
 td.menu_element{
@@ -43,20 +46,26 @@ td.menu_element{
   color: white;
   font-size: 20px;
   font-family: Courier;
-  background-color: #157203;
   height: 50px;
 }
 
+td.menu_element.home
+{
+  color: black;
+  background-color: #d0cfcf;
+}
+
 td.menu_element:hover{
-  background-color: #4cb538;
+  background-color: #7a7d7d;
   cursor: pointer;
 }
 
+/* CONTENT */
 div.my_picture{
   float: left;
 }
 
 div.content{
   padding-left: 5px;
-  font-family: Courier;
+  font-size: 25px;
 }
