--- a/index.css
+++ b/index.css
@@ -58,6 +58,7 @@ td.menu_element.link:hover
 /******************************************************************************/
 /* CONTENT */
 div.my_picture{
+  position: absolute;
   float: left;
   border-style: solid;
   border-width: 4px;
@@ -66,6 +67,8 @@ div.my_picture{
 }
 
 h1.content_header{
+  padding-bottom: 10px;
+  margin: 20px 20px 20px 20px
   font-style: italic;
   border-bottom-style: solid;
   border-bottom-width: 3px;
@@ -73,6 +76,8 @@ h1.content_header{
 }
 
 div.content{
-  margin: 10px 10px 10px 10px;
+  margin: 10px 30px 10px 30px;
+  text-indent: 60px;
+  line-height: 50px;
   font-size: 30px;
 }
