--- a/index.css
+++ b/index.css
@@ -13,6 +13,6 @@ h1.content_header{
 div.content{
   margin: 10px 30px 10px 30px;
   text-indent: 60px;
-  line-height: 45px;
-  font-size: 30px;
+  line-height: 1.6em;
+  font-size: 1.9em;
 }
