--- a/Portfolio/PhonetGenerator/phonet_generator.css
+++ b/Portfolio/PhonetGenerator/phonet_generator.css
@@ -36,15 +36,15 @@ div.overview .table_field p
   padding: 5px;
 }
 
-div.overview .table_field p.table_field_list
+div.overview .table_field p.underline_section
 {
   border-bottom-style: solid;
-  border-bottom-color: #67696d;
+  border-bottom-color: #67696d
 }
 
 div.description
 {
-  margin: 20px;
+  margin: 40px;
   text-indent: 60px;
   line-height: 45px;
   font-size: 30px;
@@ -59,8 +59,7 @@ div.description ul
 div.description h1.content_header
 {
   padding-bottom: 10px;
-  margin: 20px 20px 20px 20px
-  font-style: italic;
+  margin: 20px 20px 20px 20px;
   border-bottom-style: solid;
   border-bottom-width: 3px;
   border-bottom-color: #7a7d7d;
