--- a/Portfolio/PhonetGenerator/phonet_generator.css
+++ b/Portfolio/PhonetGenerator/phonet_generator.css
@@ -36,7 +36,7 @@ div.overview .table_field p
   padding: 5px;
 }
 
-div.overview .table_field p.underline_section
+p.underline_section
 {
   border-bottom-style: solid;
   border-bottom-color: #67696d
