--- a/Resources/master.css
+++ b/Resources/master.css
@@ -75,3 +75,61 @@ td.menu_element.link:hover
   background-color: #7a7d7d;
   cursor: pointer;
 }
+
+/******************************************************************************/
+/* OTHER */
+
+/* Spanning button */
+/* Button spans the entire width of the browser */
+table.spanning_button
+{
+  margin-top: 20px;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-bottom: 15px;
+  min-width: 96%;
+  max-width: 96%;
+  height: 100px;
+  border-style: solid;
+  border-color: #211A1D;
+  border-width: 1px;
+  border-radius: 10px;
+  background-color: #211a1d;
+  color: white;
+
+  font-size: 35px;
+  font-weight: bold;
+  font-family: Helvetica;
+  text-align: center;
+}
+
+table.spanning_button td
+{
+  border-radius: 8px;
+  padding: 0px;
+}
+
+table.spanning_button td:hover
+{
+  background-color: #7a7d7d;
+  cursor: pointer;
+}
+
+table.spanning_button a
+{
+  /* padding for entire button link */
+  padding: 0.6em;
+  display: block;
+  text-decoration: none;
+  text-decoration-color: none;
+}
+
+table.spanning_button a:link
+{
+  color: white;
+}
+
+table.spanning_button a:visited
+{
+  color: white;
+}
