--- a/redesign/style.css
+++ b/redesign/style.css
@@ -6,35 +6,29 @@ div.main {
   display: grid;
   grid-template-columns: 20em auto;
   grid-template-rows: 4em auto;
-  grid-column-gap: 5px;
-  grid-row-gap: 5px;
   width: 100%;
   height: 100%;
 }
 
 div.item {
-  background-color: rgba(10, 10, 150, 0.5);
+  background-color: rgba(10, 10, 10, 0.5);
 }
-  
 
-div.header {
+div.header_cell {
   grid-column-start :1;
   grid-column-end: 3;
 }
-
-div.header_bar {
+div.header_graphic {
   width: 90%;
   height: 100%;
   border-top: 4em solid rgb(0, 153, 0);
   border-right: 2em solid transparent;
 }
-
-div.header_text_container {
+div.header_container {
   width: 100%;
   height: 100%;
   margin-top: -4em;
 }
-
 div.header_text {
   width: 100%;
   height: 100%;
@@ -42,13 +36,25 @@ div.header_text {
   align-items: center;
   text-indent: 1em;
   font-size: 2em;
-  font-family: "Courier New";
+  font-family: Impact, Charcoal, sans-serif;
   font-style: italic;
+  color: rgb(22, 22, 22);
 }
 
-
-.sidebar {
+.sidebar_graphic {
+  width: 100%;
+  height: 30em;
+  border-left: 20em solid rgba(22, 22, 22, 1.0);
+  border-bottom: 7em solid transparent;
+}
+.sidebar_container {
+  width: 100%;
+  height: 100%;
+  margin-left: -20em;
+}
+.sidebar_text {
+  font-size: 1.3em;
+  font-family: "Arial Black", Gadget, sans-serif;
+  color: rgb(190, 190, 190);
 }
 
-.temp {
-}
