--- a/redesign/style.css
+++ b/redesign/style.css
@@ -18,21 +18,11 @@ div.header_cell {
   grid-column-start :1;
   grid-column-end: 3;
 }
-div.header_graphic {
-  width: 90%;
-  height: 100%;
-  border-top: 4em solid rgb(0, 153, 0);
-  border-right: 2em solid transparent;
-}
-div.header_container {
-  width: 100%;
-  height: 100%;
-  margin-top: -4em;
-}
-div.header_text {
+div.header_content {
   width: 100%;
   height: 100%;
   display: flex;
+  background-color: rgb(0, 153, 0);
   align-items: center;
   text-indent: 1em;
   font-size: 2em;
@@ -41,18 +31,10 @@ div.header_text {
   color: rgb(22, 22, 22);
 }
 
-.sidebar_graphic {
-  width: 100%;
-  height: 30em;
-  border-left: 20em solid rgba(22, 22, 22, 1.0);
-  border-bottom: 7em solid transparent;
-}
-.sidebar_container {
+.sidebar_content {
   width: 100%;
   height: 100%;
-  margin-left: -20em;
-}
-.sidebar_text {
+  background-color: rgb(22, 22, 22);
   font-size: 1.3em;
   font-family: "Arial Black", Gadget, sans-serif;
   color: rgb(190, 190, 190);
