--- a/redesign/style.css
+++ b/redesign/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Racing;
+  src: url(racing_sans_one_regular.ttf);
+}
+
 body {
   margin: 0px;
   overflow: hidden;
@@ -7,24 +12,19 @@ div.main_grid {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 20em auto;
+  grid-template-columns: 15em auto;
   grid-template-rows: 4em auto;
 }
 
-div.header_cell {
-  grid-column-start :1;
-  grid-column-end: 3;
-}
 div.header_content {
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
   background-color: rgb(0, 153, 0);
-  text-indent: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 2em;
-  font-family: Impact, Charcoal, sans-serif;
-  font-style: italic;
+  font-family: Racing, Impact, sans-serif;
   color: rgb(22, 22, 22);
 }
 
@@ -33,7 +33,6 @@ div.sidebar_grid {
   display: grid;
   grid-template-rows: 1em repeat(4, 1.6em);
   background-color: rgb(22, 22, 22);
-  overflow-y: scroll;
 }
 div.sidebar_element {
   display: flex;
@@ -51,13 +50,18 @@ div.sidebar_element:hover {
 }
 
 div.page_content {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
   width: calc(100% - 4em);
-  height: calc(100% - 4em);
+  height: calc(100% - 2em);
   font-size: 1.4em;
   font-family: Arial;
-  overflow-y: scroll;
   padding: 1em;
-  border: 1em solid rgb(180, 180, 180);
+  border-left: 1em solid rgb(110, 110, 110);
+  border-right: 1em solid rgb(110, 110, 110);
   background-color: rgb(255, 255, 255);
+  overflow-y: scroll;
 }
 
