--- a/redesign/style.css
+++ b/redesign/style.css
@@ -25,10 +25,18 @@ div.main_grid {
   grid-template-rows: 4em auto;
 }
 
-div.header_content {
+div.header_container {
   width: 100%;
   height: 100%;
   background-color: var(--color-green);
+  display: flex;
+}
+div.header_dropdown_button {
+  flex-grow: 1;
+  background-color: rgba(200, 0, 0, 0.4);
+}
+div.header_text {
+  flex-grow: 2;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,7 +77,7 @@ div.page_content {
   grid-row-end: 3;
   width: calc(100% - 4em);
   height: calc(100% - 2em);
-  font-size: 1.3em;
+  font-size: 1.1em;
   font-family: Arial;
   padding: 1em;
   border-left: 1em solid var(--color-gray);
@@ -86,13 +94,19 @@ div.page_content {
     grid-template-columns: auto;
     grid-template-rows: 4em auto;
   }
-  div.header_content {
+
+  div.header_container {
     grid-row-start: 1;
     grid-row-end: 2;
   }
+  div.header_dropdown_button {
+    display: visible;
+  }
+
   div.sidebar_grid {
     display: none;
   }
+
   div.page_content {
     grid-column-start: 1;
     grid-column-end: 2;
@@ -102,5 +116,12 @@ div.page_content {
     width: calc(100% - 2em);
     height: 100%;
     overflow: visible;
+  }
+}
+
+@media screen and (min-width: 70em)
+{
+  div.header_dropdown_button {
+    display: none;
   }
 }
