--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html {
   --color-black: rgb(22, 22, 22);
   --color-gray: rgb(110, 110, 110);
   --color-light-gray: rgb(190, 190, 190);
+  --color-dark-gray: rgb(70, 70, 70);
   --color-white: rgb(255, 255, 255);
 
   --dropdown-base-offset: 9.63em;
@@ -21,14 +22,31 @@ body {
   margin: 0px;
   overflow: hidden;
   overflow-x: hidden;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: 100%;
+  justify-content: center;
+  background-color: var(--color-black);
+}
+
+div.main_grid_accent {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+svg.accent polygon {
+  fill: var(--color-dark-gray);
 }
 
 div.main_grid {
-  width: 100%;
+  width: 70em;
   height: 100%;
+  grid-column-start: 2;
+  grid-column-end: 3;
   display: grid;
-  grid-template-columns: 15em auto;
+  grid-template-columns: 15em 55em;
   grid-template-rows: 4em auto;
+  border-left: 1em solid var(--color-gray);
+  border-right: 1em solid var(--color-gray);
 }
 
 div.header_container {
@@ -114,7 +132,6 @@ div.content_container {
   grid-row-start: 1;
   grid-row-end: 3;
   border-left: 1em solid var(--color-gray);
-  border-right: 1em solid var(--color-gray);
   background-color: var(--color-white);
   overflow-y: scroll;
 }
@@ -122,9 +139,15 @@ div.content_container {
 @media screen and (max-width: 70em) {
   body {
     overflow-y: scroll;
+    background-color: var(--color-white);
+    display: block;
+    width: 100%;
+    height: 100%;
   }
   div.main_grid {
-    grid-template-columns: auto;
+    width: 100%;
+    border: none;
+    grid-template-columns: 100%;
     grid-template-rows: 4em var(--dropdown-base-offset) auto;
   }
 
