--- a/main_style.css
+++ b/main_style.css
@@ -271,3 +271,13 @@ code {
   border: 0.15em solid var(--color-ultra-light-gray);
   border-radius: 0.25em;
 }
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  max-height: 100%;
+  border: 0.5em solid var(--color-black);
+  border-radius: 0.5em;
+}
